# Wiminal

./: .gitignore  CMakeLists.txt  README.md
CMake/: FileLists.cmake  InstallGoogleTest.cmake
src/gui/: main.cpp  wiminal.hpp
src/lib/: terminal_info.hpp
src/parser/: argument_parser.hpp
test/: CMakeLists.txt  test_argument_parser.cpp
